<resources>
    <string name="app_name">Quick Sort Simulator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_simulation">Start simulation</string>
    <string name="return_to_setup">Return to setup</string>
    <string name="add_number">Add</string>
    <string name="repeat_simulation">Repeat simulation</string>
    <string name="show_code">Show code</string>
    <string name="previous_step">Previous step</string>
    <string name="next_step">Next step</string>
    <string name="edit_text_setup_simulator">Type each number separate by .</string>
</resources>