<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Simulation">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/return_to_setup"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="304dp"
        android:text="@string/return_to_setup" />

    <Button
        android:id="@+id/repeat_simulation"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="307dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="4dp"
        android:text="@string/repeat_simulation" />

    <Button
        android:id="@+id/show_code"
        android:layout_width="132dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="148dp"
        android:text="@string/show_code" />

    <Button
        android:id="@+id/next_step"
        android:layout_width="158dp"
        android:layout_height="92dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/next_step" />

</RelativeLayout>